[tool.poetry]
name = "memento"
version = "0.1.0"
description = "A flashcard project"
authors = ["Muntasir-Mahmud <m.siyam529@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email", "dotenv"], version = "^2.6.4"}
fastapi-users = "^13.0.0"
fastapi-users-tortoise = "^0.2.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
aerich = "^0.7.2"
saq = {extras = ["hiredis", "web"], version = "^0.9.3"}
hupper = "^1.11"
aiosmtplib = "^3.0.1"
python-multipart = "^0.0.9"
sentry-sdk = "^1.17.0"
rich = "^13.3.2"
typer = "^0.7.0"
watchgod = "^0.8.2"
Jinja2 = "^3.1.2"
httpx = "^0.23.3"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
factory-boy = "^3.2.1"
pre-commit = "^3.1.1"
mypy = "^1.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipython = "^8.11.0"
aiosmtpd = "^1.4.4.post2"
honcho = "^1.1.0"

[tool.aerich]
tortoise_orm = "app.db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.isort]
profile = "black"

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
select = [
    "E", # https://github.com/charliermarsh/ruff#pycodestylet
    "F", # https://github.com/charliermarsh/ruff#pyflakes
    "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    "N", # https://github.com/charliermarsh/ruff#pep8-naming
    "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T" # https://github.com/charliermarsh/ruff#flake8-print
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
